--- a/Portfolio Tab UI/index.html
+++ b/Portfolio Tab UI/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="description" content="Resume / CV" />
     <meta name="keywords" content="vcard, responsive, retina, resume, jquery, css3, bootstrap, Material CV, portfolio" />
-    <meta name="author" content="lmpixels" />
+    <meta name="author" content="">
     <link rel="shortcut icon" href="favicon.ico">
 
 
